--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mongoose": "^8.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "zod": "^3.22.4"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
